2008-07-22  Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql: Some changes for types not implemented in 2.0

	* module_manager_editor.php: Added help, more space in textareas for
	tcp recv/send. Better layout.

	* help.png: Smaller icon.

	* view_server.php: Fixed problem with lastupdate render. This was using
	and incorrect function to render data. 

2008-07-21  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* include/functions_reporting.php: Last commit forgot a semicolon. Fixed.

2008-07-21  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/graph_builder.php,
	operation/snmpconsole/snmp_alert.php: Applied patch from Kato
	Atsushi.

	* include/functions_reporting.php,
	operation/reporting/reporting_viewer.php,
	godmode/reporting/reporting_builder.php: Adopted to changes in
	get_db_* functions.

	* include/functions_db.php: Removed quotes sorrounding %d characters
	in sprintf. Returned empty array on get_simple_alerts_in_agent() and
	get_combined_alerts_in_agent(). Style correction. Return all fields on
	get_db_all_fields_in_table().

	* ChangeLog: Updated previous commit message format and date.

2008-07-21  Evi Vanoost  <vanooste@rcbi.rochester.edu>
	
	* godmode/db/*.php: require_once for config might already have loaded.
	Changed mysql_real_escape_string in favor of get_parameter_post.
	Process the DELETE SQL queries through process_sql(). Changed
	comprueba_login() for check_login(). Adhered some things to preferred
	style. Compounded SQL queries into joins, subqueries or functions.
	Removed mysql_close() from db_purge.php since the select. After the
	delete wouldn't work anymore (database closed).
	
	* godmode/reporting/reporting_builder.php: Fixed a bug that was
	introduced when the SQL functions returned false.

	* include/functions_db.php: Made foreach instead of while loops for
	simpler functions. Fixed get_reports that failed since SQL function
	return false. All SQL functions now return false in case of empty. New